--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1659,3 +1659,65 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		/* additions */
+		#projects nav ul {
+			/* display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
+			display: flex; */
+			margin-bottom: 0;
+			list-style: none;
+			padding-left: 0;
+			border: solid 1px #ffffff;
+			border-radius: 4px;
+			max-width: 10rem;
+		}
+
+			#projects nav ul li {
+				padding-left: 0;
+				border-left: solid 1px #ffffff;
+			}
+
+				#projects nav ul li:first-child {
+					border-left: 0;
+				}
+
+				#projects nav ul li a {
+					display: block;
+					min-width: 7.5rem;
+					height: 2.75rem;
+					line-height: 2.75rem;
+					padding: 0 1.25rem 0 1.65rem;
+					text-transform: uppercase;
+					letter-spacing: 0.2rem;
+					font-size: 0.8rem;
+					border-bottom: 0;
+				}
+
+					#projects nav ul li a:hover {
+						background-color: rgba(255, 255, 255, 0.075);
+					}
+
+					#projects nav ul li a:active {
+						background-color: rgba(255, 255, 255, 0.175);
+					}
+
+		#projects nav.use-middle:after {
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			left: calc(50% - 1px);
+			width: 1px;
+			height: 100%;
+			background: #ffffff;
+		}
+
+		#projects nav.use-middle ul li.is-middle {
+			border-left: 0;
+		}
+
+		#about ul {
+			list-style-type:circle;	
+		}
