--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1111,6 +1111,7 @@ input, select, textarea {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
+		backface-visibility:hidden;
 		-webkit-backface-visibility: hidden;
 		position: fixed;
 		top: 0;
@@ -1719,5 +1720,11 @@ input, select, textarea {
 		}
 
 		#about ul {
-			list-style-type:circle;	
+			list-style-type: circle;	
+		}
+
+		@counter-style thumbs {
+			system: cyclic;
+			symbols: "\1F44D";
+			suffix: " ";
 		}
